feat: add delete barbecue
